--- a/e-sports/server/package.json
+++ b/e-sports/server/package.json
@@ -1,17 +1,21 @@
 {
   "name": "server",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "-": "^0.0.1",
+    "@types/express": "^4.17.14",
+    "D": "^1.0.0",
+    "express": "^4.18.1",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^4.8.3"
