--- a/e-sports/server/package.json
+++ b/e-sports/server/package.json
@@ -5,19 +5,23 @@
   "main": "src/server.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev --exit-child src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
+    "@prisma/client": "^4.3.1",
     "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
     "D": "^1.0.0",
     "express": "^4.18.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "prisma": "^4.3.1",
     "typescript": "^4.8.3"
   }
 }
