--- a/e-sports/web/package.json
+++ b/e-sports/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.0",
     "expo-updates": "^0.14.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
